<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_show_picture"
        android:layout_width="match_parent"
        android:onClick="show_bottom_click"
        android:background="@color/colorBlack"
        android:layout_height="match_parent"
        />

    <LinearLayout
        android:id="@+id/ll_show_top"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorTransparentBlack"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ibtn_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/menubar_back_select"
            android:onClick="show_bottom_click"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/tv_show_picture_title"
            android:textColor="@color/colorWhite"
            android:textSize="23sp"/>

        <ImageButton
            android:id="@+id/ibtn_share"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/share_search_select"
            android:onClick="show_bottom_click"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_show_bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:alpha="50"
        android:background="@color/colorTransparentBlack"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_collect"
            style="@style/show_picture_button"
            android:text="@string/tv_collect"
            />

        <Button
            android:id="@+id/btn_set_wallpaper"
            style="@style/show_picture_button"
            android:text="@string/tv_set_wallpaper"
            />

        <Button
            android:id="@+id/btn_set_download"
            style="@style/show_picture_button"
            android:text="@string/tv_download"
            />
    </LinearLayout>

</RelativeLayout>