<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorBlack"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:text="@string/text_my_collect"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_margin="15dp"
            android:background="@color/colorWhite"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="collectManage"
            android:text="@string/btn_manage"
            android:textColor="@color/collect_manage_color_select"
            android:textSize="18sp"
            />
    </RelativeLayout>

    <com.handmark.pulltorefresh.library.PullToRefreshGridView
        android:id="@+id/ptr_gv_activity_collect"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:horizontalSpacing="0.75dp"
        android:numColumns="3"
        android:verticalSpacing="0.75dp"
        app:ptrDrawable="@drawable/progress_bar_icon"
        app:ptrHeaderTextColor="@color/colorWhite"/>

    <RelativeLayout
        android:id="@+id/rl_edit_choose"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorWhite"
        android:gravity="center_vertical"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_all_choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:background="@color/colorWhite"
            android:text="@string/btn_all_choose"
            android:onClick="collectManage"
            android:textColor="@color/collect_item_color_select"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp"
            android:background="@color/colorWhite"
            android:text="@string/btn_delete"
            android:onClick="collectManage"
            android:textColor="@color/collect_item_color_select"
            android:textSize="18sp"/>
    </RelativeLayout>
</LinearLayout>